@@ -1,5 +1,4 @@
 -Djansi.passthrough=true
 -Dmaven.ansi.disable=true
---enable-native-access=ALL-UNNAMED
 --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
 --add-opens java.base/sun.misc=ALL-UNNAMED
